# stance-llm

./: LICENSE  README.md  pyproject.toml
src/stance_llm/: base.py  process.py
stance_llm/: README.md  pyproject.toml
stance_llm/stance_llm/: base.py  process.py
stance_llm/tests/: conftest.py  test_detect_stance.py  test_process.py  test_task_creation.py
tests/: conftest.py  test_detect_stance.py  test_process.py
