[tool.poetry]
name = "stance-llm"
version = "0.1.2"
description = "Classify stances of entities related to a statement in German text using large language models through guidance-llm"
authors = ["Mario Angst <mario.angst@uzh.ch>", "Viviane Walker <viviane.walker@uzh.ch>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/urban-sustainability-lab-zurich/stance-llm"

[tool.poetry.dependencies]
python = "^3.10"
guidance = "^0.1.10"
loguru = "^0.7.2"
tdqm = "^0.0.1"
polars = "^0.20.15"
wonderwords = "^2.2.0"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
transformers = "^4.41.1"
python-dotenv = "^1.0.1"
ptpython = "^3.0.26"
srsly = "^2.4.8"
typer = "^0.9.0"
openai = "^1.30.1"
pytest = "^8.2.1"
pytest-dotenv = "^0.5.2"
torch = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
